# nvidya.io

./: CNAME  LICENSE  README.md  design.md  index.html  nvidya-io-36545241163e710.js  nvidya-io-36545241163e710_bg.wasm  script.js  style.css
wasm-app/: Cargo.toml  Trunk.toml  index.html  suppress_findings.py
wasm-app/.cargo/: config.toml
wasm-app/src/: app.rs  main.rs
wasm-app/src/animation/: mod.rs  scramble_text.rs  spring.rs  stagger.rs  svg_draw.rs  timeline.rs  tween.rs
wasm-app/src/components/: blog_list.rs  contact.rs  hero.rs  mod.rs  project_card.rs  sidebar.rs  terminal.rs
