[package]
name = "nvidya-io"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DomRect",
    "Element",
    "Event",
    "MouseEvent",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "SvgElement",
    "SvgPathElement",
    "SvgsvgElement",
    "NodeList",
    "Performance",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
